Fixed spacing in Task properties panel

--- a/src/app/component/document/document.component.scss
+++ b/src/app/component/document/document.component.scss
@@ -136,8 +136,10 @@
 	flex-direction: column;
 	align-items: flex-start;
 
+	font-size: 0.875rem;
 	.title {
 		opacity: 0.5;
+		margin-left: 0.75rem;
 	}
 
 	.item-list {
@@ -145,7 +147,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		gap: 0.25rem;
+		gap: 0.5rem;
 
 		.status-item {
 			width: 100%;
